--- a/app/assets/stylesheets/birthdays.scss
+++ b/app/assets/stylesheets/birthdays.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the Birthdays controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+@import "gift_birthdays";
+@import "gifts";
+@import "users";
+@import "reminders";
+@import "gift_birthdays";
