--- a/app/views/reminders/_form.html.erb
+++ b/app/views/reminders/_form.html.erb
@@ -1,6 +1,8 @@
 <div class="row">
   <div class="col-md-6 offset-3">
     <%= form_with(model: @reminder, local: true) do |f| %>
+      <%= f.label :title %>
+      <%= f.string_field :title, class: 'mb-1 form-control' %>          
       <%= f.label :startdate %>
       <%= f.date_field :startdate, class: 'mb-1 form-control' %>
       <%= f.collection_select :frequency, @frequencies, :to_s, :to_s, class: 'mb-1 form-control' %>
