--- a/app/views/birthdays/_form.html.erb
+++ b/app/views/birthdays/_form.html.erb
@@ -15,3 +15,6 @@
     <% end %>
   </div>
 </div>
+
+SHOULD NOT BE CREATING REMINDERS HERE. HAVE USERS CREATE BIRTHDAYS FIRST THEN REDIRECT THEM TO REMINDER NEW 
+ALSO USER_ID SHOULD BE CURRENT USER_ID USING SESSION/ HELPER METHOD. 
