--- a/app/views/birthdays/show.html.erb
+++ b/app/views/birthdays/show.html.erb
@@ -1,3 +1,4 @@
 
-
 <%= button_to "Add Reminder", new_reminder_path, method: :get, class: "mt-2 btn btn-primary" %>
+<%= button_to "Edit Reminder", edit_reminder_path(@birthday), method: :get, class: "mt-2 btn btn-primary" %>
+<%= button_to "Delete Reminder", reminder_path(@reminder), method: :delete, class: "mt-2 btn btn-primary" %>
