--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,18 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  
   </head>
+
+    <ul>
+      <% if @current_user %>
+        <li><%= link_to 'User Home', user_path(@current_user) %></li>
+        <li class='right'>Welcome <%= @current_user.username %>!!!</li>
+        <li class='right'><%= link_to "Log-out", logout_path, method: :delete %></li>
+      <% else %>
+        <li class='right'><%= link_to 'Sign-up', new_user_path %></li>
+        <li class='right'><%= link_to 'Login', new_session_path %></li>
+      <% end %>
+    </ul>
 
   <body>
     <%= yield %>
