--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,14 @@
 <div class="row">
   <div class="col-md-6 offset-3">
-    <%= form_with(model: @user, local: true) do |f| %>
+    
+  
+  <% if flash[:errors] %>
+    <% flash[:errors].each do |error| %>
+      <p><%= error %></p>
+    <% end %>
+  <% end %>
+  
+  <%= form_with(model: @user, local: true) do |f| %>
 
       <%= f.label :username %>
       <%= f.text_field :username, class: 'mb-1 form-control' %>
