--- a/app/views/gift_birthdays/_form.html.erb
+++ b/app/views/gift_birthdays/_form.html.erb
@@ -1,3 +1,9 @@
+<% if flash[:list_errors] %>
+  <% flash[:list_errors].each do |error| %>
+  <p><%= error %></p>
+<% end %>
+<% end %>
+
 <div class="row">
   <div class="col-md-6 offset-3">
     <%= form_with(model: @gift_birthday, local: true) do |f| %>
