--- a/app/views/gifts/_form.html.erb
+++ b/app/views/gifts/_form.html.erb
@@ -1,12 +1,11 @@
 <div class="row">
   <div class="col-md-6 offset-3">
-  <p>Suggestions: METHOD FOR RANDOM EXISTING GIFTIDEAS HERE</p>
   <p>Most Popular: top 5 most common giftideas by all users</p><br>
     <%= form_with(model: @gift, local: true) do |f| %>
       <%= f.label :giftidea %>
       <%= f.text_field :giftidea, class: 'mb-1 form-control' %>
-      $<%= f.label :price %>
-      <%= f.number_field :price, min: 1, class: 'mb-1 form-control' %>
+      <%= f.label :price %>
+      $<%= f.number_field :price, min: 1, placeholder: '$20', class: 'mb-1 form-control' %>
       <%= f.submit "Create", class: "mt-2 btn btn-primary" %>
     <% end %>
   </div>
