--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,15 +1,18 @@
 <div class="row">
   <div class="col-md-6 offset-3">
     
-  
-  <% if flash[:list_errors] %>
-    <% flash[:list_errors].each do |error| %>
-      <p><%= error %></p>
-    <% end %>
-  <% end %>
+      <% if flash[:list_errors] %>
+        <div id="error_explanation">
+           <div class="alert alert-danger">  
+         <% flash[:list_errors].each do |error| %>
+          <p><%= error %></p>
+        <% end %>
+         </div>
+      </div>
+      <% end %>
+
   
   <%= form_with(model: @user, local: true) do |f| %>
-
       <%= f.label :username %>
       <%= f.text_field :username, class: 'mb-1 form-control' %>
 
@@ -22,7 +25,7 @@
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation, class: 'mb-1 form-control' %>
 
-      <%= f.submit "Create my account", class: "mt-2 btn btn-primary" %>
+      <%= f.submit "Submit", class: "mt-2 btn btn-primary" %>
     <% end %>
   </div>
 </div>
