--- a/app/views/gifts/_form.html.erb
+++ b/app/views/gifts/_form.html.erb
@@ -1,12 +1,32 @@
 <div class="row">
   <div class="col-md-6 offset-3">
-  <p>Most Popular: top 5 most common giftideas by all users</p><br>
-    <%= form_with(model: @gift, local: true) do |f| %>
-      <%= f.label :giftidea %>
-      <%= f.text_field :giftidea, class: 'mb-1 form-control' %>
-      <%= f.label :price %>
-      $<%= f.number_field :price, min: 1, placeholder: '$20', class: 'mb-1 form-control' %>
-      <%= f.submit "Create", class: "mt-2 btn btn-primary" %>
-    <% end %>
+      
+
+      <% if flash[:list_errors] %>
+        <div id="error_explanation">
+           <div class="alert alert-danger">  
+         <% flash[:list_errors].each do |error| %>
+          <p><%= error %></p>
+        <% end %>
+         </div>
+      </div>
+      <% end %>
+
+
+  <div class="row">
+    <div class="col-md-6 offset-3">
+      <%= form_with(model: @gift, local: true) do |f| %>
+        <%= f.label "Select Giftee" %>
+        <%= f.collection_select :birthday_id, @birthdays, :id, :giftee_name, class: 'mb-1 form-control' %>  <br>
+        <%= f.label :giftidea %>
+        <%= f.text_field :giftidea, class: 'mb-1 form-control' %>
+        <%= f.label :price %>
+        $<%= f.number_field :price, min: 1, placeholder: '$20', class: 'mb-1 form-control' %>
+        <%= f.submit "Create", class: "mt-2 btn btn-primary" %>
+      <% end %>
+    </div>
   </div>
+
+  </div>
+
 </div>
