--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <ul>
       <% if @current_user %>
         <li><%= link_to 'User Home', user_path(@current_user) %></li>
-        <li class='right'>Welcome <%= @current_user.username %>!!!</li>
+        <li class='right'> You're logged in as: <%= @current_user.username %></li>
         <li class='right'><%= link_to "Log-out", logout_path, method: :delete %></li>
       <% else %>
         <li class='right'><%= link_to 'Sign-up', new_user_path %></li>
