--- a/app/views/reminders/_form.html.erb
+++ b/app/views/reminders/_form.html.erb
@@ -1,18 +1,22 @@
-  <% if flash[:list_errors] %>
-    <% flash[:list_errors].each do |error| %>
-      <p><%= error %></p>
-    <% end %>
-  <% end %>
-
 <div class="row">
   <div class="col-md-6 offset-3">
-    <%= form_with(model: @reminder, local: true) do |f| %>   
+  
+      <% if flash[:list_errors] %>
+        <div id="error_explanation">
+           <div class="alert alert-danger">  
+         <% flash[:list_errors].each do |error| %>
+          <p><%= error %></p>
+        <% end %>
+         </div>
+      </div>
+      <% end %>
+
+    <%= form_with(model: @reminder, local: true) do |f| %> 
       <%= f.label :startdate %>
       <%= f.date_field :startdate, class: 'mb-1 form-control' %>
       <%= f.label :frequency %>
-      <%= f.collection_select :frequency, @frequencies, :to_s, :to_s, class: 'mb-1 form-control' %>
-      <%= f.label :birthday_id %>
-      <%= f.collection_select :birthday_id, Birthday.all, :id, :giftee_name, class: 'mb-1 form-control' %>      
+      <%= f.collection_select :frequency, @frequencies, :to_s, :to_s, class: 'mb-1 form-control' %>  
+      <%= f.collection_select :birthday_id, @birthdays, :id, :giftee_name, class: 'mb-1 form-control' %>     
       <%= f.submit "Create", class: "mt-2 btn btn-primary" %>
     <% end %>
   </div>
