--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,41 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+@import "bootstrap/scss/bootstrap";
+@import "birthdays";
+@import "gifts";
+@import "users";
+
+.sitetitle {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  color: white;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  text-shadow: 2px 2px black;
+  transform: translate(-50%, -50%);
+}
+
+
+.sitetext {
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  color: white;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-shadow: 2px 2px black;
+  transform: translate(-50%, -50%);
+}
+
+
+.homepage{
+	background-size: cover;
+	height: 500px;
+  width: 600px;
+}
+
+.list-group{
+  display:inline-block;
+}
+
+.cards {
+  display: flex;
+  justify-content: space-between;
+}
