--- a/app/assets/stylesheets/birthdays.scss
+++ b/app/assets/stylesheets/birthdays.scss
@@ -1,8 +1,4 @@
 // Place all the styles related to the Birthdays controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
-@import "gift_birthdays";
-@import "gifts";
-@import "users";
-@import "reminders";
-@import "gift_birthdays";
+// Thanks to https://3dtransforms.desandro.com/card-flip
