--- a/app/views/gifts/_form.html.erb
+++ b/app/views/gifts/_form.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-md-6 offset-3">
-      
+  <br><br><br>
+  <center><h1>New Gift Idea</h1></center><br>  
 
       <% if flash[:list_errors] %>
         <div id="error_explanation">
@@ -13,19 +14,23 @@
       <% end %>
 
 
+<center>
   <div class="row">
     <div class="col-md-6 offset-3">
       <%= form_with(model: @gift, local: true) do |f| %>
-        <%= f.label "Select Giftee" %>
-        <%= f.collection_select :birthday_id, @birthdays, :id, :giftee_name, class: 'mb-1 form-control' %>  <br>
-        <%= f.label :giftidea %>
-        <%= f.text_field :giftidea, class: 'mb-1 form-control' %>
+        <%= f.label "Who is this for?" %><br>
+
+        <%= f.collection_select :birthday_id, @birthdays, :id, :giftee_name, class: 'mb-1 form-control' %>  <br><br>
+        <%= f.label "Enter Gift Here" %>
+        <%= f.text_field :giftidea, class: 'mb-1 form-control' %><br>
         <%= f.label :price %>
-        $<%= f.number_field :price, min: 1, placeholder: '$20', class: 'mb-1 form-control' %>
+        $<%= f.number_field :price, min: 1, placeholder: '$20', class: 'mb-1 form-control' %><br>
         <%= f.submit "Create", class: "mt-2 btn btn-primary" %>
       <% end %>
     </div>
   </div>
+
+</center>
 
   </div>
 
