--- a/app/views/reminders/_form.html.erb
+++ b/app/views/reminders/_form.html.erb
@@ -1,6 +1,9 @@
+<center>
 <div class="row">
   <div class="col-md-6 offset-3">
-  
+
+  <h1> Create a Custom Reminder </h1><br>
+
       <% if flash[:list_errors] %>
         <div id="error_explanation">
            <div class="alert alert-danger">  
@@ -10,14 +13,15 @@
          </div>
       </div>
       <% end %>
+      
 
     <%= form_with(model: @reminder, local: true) do |f| %> 
-      <%= f.label :startdate %>
-      <%= f.date_field :startdate, class: 'mb-1 form-control' %>
-      <%= f.label :frequency %>
-      <%= f.collection_select :frequency, @frequencies, :to_s, :to_s, class: 'mb-1 form-control' %>  
+      <%= f.label :message %>
+      <%= f.text_area :message, class: 'mb-1 form-control' %>  
       <%= f.collection_select :birthday_id, @birthdays, :id, :giftee_name, class: 'mb-1 form-control' %>     
       <%= f.submit "Create", class: "mt-2 btn btn-primary" %>
     <% end %>
   </div>
-</div>
+
+  </div>
+  </center>
