--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,7 @@
-<h1 class='text-center'>Sign up</h1>
+<br><br>
+<h1 class='text-center'>Sign Up</h1><br>
+<h4 class='text-center'>Become a Re-"Member" today!</h4>
+
+<br>
 
 <%=render 'form' %>
