--- a/app/views/birthdays/show.html.erb
+++ b/app/views/birthdays/show.html.erb
@@ -1,40 +1,39 @@
 
 <center>
+<section class="get-in-touch">
 <div class="shadow-sm p-3 mb-5 bg-white rounded">
-    <h2 class="p-3 mb-2 bg-primary text-white">Name: <%= @birthday.giftee_name.capitalize() %></h2>
-    <h3 class="p-3 mb-2 bg-light text-dark">Birthday: <%= @birthday.dob.strftime("%B #{@birthday.dob.day.ordinalize}") %></h3>
+    <h2 class="title2">Name: <%= @birthday.giftee_name.capitalize()%></h2>
+    <h4 class="title2">Birthday: <%= @birthday.dob.strftime("%B #{@birthday.dob.day.ordinalize}") %></h4>
 </div>
+</section>
 
 
-
-  <%= image_tag(@birthday.image, style:'width:300px', class: "border-20 border-primary rounded") %>
-
-
+<%= image_tag(@birthday.image, style:'width:500px', class: "rounded") %><br>
 
 
 <div class="w-50 p-3">
 <div class="p-3 mb-2 bg-light">       
-        <h3 class="text-light bg-dark">Reminder</h3>
+        <h3 class="text-light title3 bg-dark">Reminder</h3>
         <%if @birthday.reminder.nil? %>
-            <%= button_to "Add Reminder", new_reminder_path, method: :get, class: "mt-2 btn btn-primary", :birthday_id => @birthday.id %>
+            <%= button_to "Add Reminder", new_reminder_path, method: :get, class: "long-btn", :birthday_id => @birthday.id %>
         <%else%>
         
-        <h3><%=@birthday.reminder.message%></h3>
+        <h3 class= "rainbow-text"><%=@birthday.reminder.message%></h3>
         <%= link_to 'Add to your calendar', birthday_path(protocol: :webcal, format: :ics)%>
-        <%= button_to "Delete Reminder", reminder_path(@birthday.reminder), method: :delete, class: "mt-2 btn btn-primary" %>
+        <%= button_to "Delete", reminder_path(@birthday.reminder), method: :delete, class: "long-btn" %>
         <%end%>
     </div>
 </div>
 
 <div class="w-50 p-3">
     <div class="p-3 mb-2 bg-light">    
-    <h3 class="text-light bg-dark">Gift Ideas</h3>
+    <h3 class="text-light title3 bg-dark">Gift Ideas</h3>
     <div class="list-group">
         <% @birthday.gifts.each do |gift|%>
-            <a href="#" class="list-group-item list-group-item-action">
+            <a href="#" class="list-group-item">
                 <div class="d-flex w-100 justify-content-between">
                     <h3 class="mb-1"><%= gift.giftidea%></h3>
-                    <small><%= button_to "x", gift_path(gift), method: :delete, class: "mt-2 btn btn-primary" %></small>
+                    <small><%= button_to "x", gift_path(gift), method: :delete, class: "x-btn" %></small>
                 </div>
                 <p class="mb-1">Price: $<%= gift.price%></p>
             </a>   
