--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,12 +1,24 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Neon Letters</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="sign">
+      <span class="fast-flicker">Rememb</span>irth<span class="flicker">d</span>ay
+    </div>
+
+  </body>
+</html>
 
 
 
 <body>
 
 <div class="homepage">
-    <img id="homeimage" src="https://images.unsplash.com/photo-1530103862676-de8c9debad1d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80"/>
-
-    <div class="sitetitle"><h1>RememBirthday</h1></div>
-    <div class="sitetext"><h3>Never forget a birthday again!</h3></div>              
+    <img id="homeimage" src="https://images.unsplash.com/photo-1530103862676-de8c9debad1d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80"/>            
 </div>
 </body>
