--- a/app/views/birthdays/new.html.erb
+++ b/app/views/birthdays/new.html.erb
@@ -1,3 +1,29 @@
 
+<section class="get-in-touch">
+   <h1 class="title">Add Birthday</h1>
+<div class="row">
+  <div class="col-md-6 offset-3">
+      <% if flash[:list_errors] %>
+        <div id="error_explanation">
+           <div class="alert alert-danger">  
+         <% flash[:list_errors].each do |error| %>
+          <p><%= error %></p>
+        <% end %>
+         </div>
+      </div>
+      <% end %>
 
-<%=render 'form' %>
+    <%= form_with(model: @birthday, local: true) do |f| %>
+      <%= f.label :giftee_name %>
+      <%= f.text_field :giftee_name, class: 'mb-1 form-control' %>   
+      <%= f.label :dob %>
+      <%= f.date_field :dob, class: 'mb-1 form-control' %><br>   
+      <%= f.label :image %>
+      <%= f.file_field :image %><br/><br>
+      <center><%= f.submit "Create", class:"submit-btn"%></center>
+
+    <% end %>
+  </div>
+</div>
+
+</section>
