--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -25,7 +25,7 @@
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation, class: 'mb-1 form-control' %>
 <br>
-      <%= f.submit "Submit", class: "mt-2 btn btn-primary" %>
+      <%= f.submit "Create", class:"submit-btn"%>
     <% end %>
   </div>
 </div>
