--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,4 @@
-<h1 class='text-center'>Edit Profile</h1>
-
+<div class="get-in-touch">
+   <h1 class="title">Edit Profile</h1>
+</div>
 <%=render 'form' %>
