--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
-<br><br>
-<h1 class='text-center'>Sign Up</h1><br>
-<h4 class='text-center'>Become a Re-"Member" today!</h4>
 
-<br>
+<div class="get-in-touch">
+<h1 class='title'>Sign Up</h1>
+<h4 class='text-center'>Become a Re-"Member" today!</h4>
+</div>
 
 <%=render 'form' %>
