--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <br><br>
 <center>
-<h1><%= @user.username%>'s Profile</h1><br>
-
+<section class="get-in-touch">
+<h1 class="title2"><%= @user.username%>'s Profile</h1>
 
 <div class="btn-group btn-group-toggle" data-toggle="buttons">
       <%= button_to "Add Birthdays", new_birthday_path(@user), method: :get, class: "btn btn-outline-primary" %>
@@ -10,26 +10,26 @@
       <%= button_to "Delete Account", @user, method: :delete, class: "btn btn-outline-danger" %>
 </div>
 
-<br><br>
+<br><br/>
 
 <div class="centered">
-<h3> Saved Birthdays: </h3><br>
+<h3 class="title3"> Saved Birthdays </h3><br>
       <% @user.birthdays.each do |birthday|%>
-      <div class="card mb-3" style="max-width: 600px;">
-      <div class="row no-gutters">
-      <div class="col-md-5">
-          <%= link_to image_tag(birthday.image, style:'width:300px; height:200px'), birthday_path(birthday), class:"card-img"%>
+      <div class="card mb-3 bg-info rounded" style="max-width: 800px;">
+      <div class="p-2 flex-grow-1 bd-highlight">
+          <%= link_to image_tag(birthday.image, style:'width:400px; height:350px'), birthday_path(birthday), class:"card-img rounded-circle"%>
     </div>
-    <div class="col-md-7">
-        <div class="card-body">
+    <div class="p-2 bd-highlight">
             <h5 class="card-title">Name: <%= birthday.giftee_name%></h5>
             <br>
-            <%= button_to "View Birthday", birthday_path(birthday), method: :get, class: "mt-2 btn btn-primary" %>
-            <%= button_to "Delete Birthday", birthday_path(birthday), method: :delete, class: "mt-2 btn btn-primary" %>
-        </div>
+           <div class="p-2 bd-highlight"> <%= button_to "View Birthday", birthday_path(birthday), method: :get, class: "mt-2 btn btn-primary" %></div>
+           <div class="p-2 bd-highlight"> <%= button_to "Delete Birthday", birthday_path(birthday), method: :delete, class: "mt-2 btn btn-primary" %></div>
     </div>
 </div>
-</div>
- <br><br>
+ <br>
+ <br>
     <%end%>
+
+</section>
 </center>
+
