--- a/app/views/birthdays/new.html.erb
+++ b/app/views/birthdays/new.html.erb
@@ -14,9 +14,9 @@
       <% end %>
 
     <%= form_with(model: @birthday, local: true) do |f| %>
-      <%= f.label :giftee_name %>
-      <%= f.text_field :giftee_name, class: 'mb-1 form-control' %>   
-      <%= f.label :dob %>
+      <%= f.label "Whose Birthday is it? (Name)" %>
+      <%= f.text_field :giftee_name, class: 'mb-1 form-control' %><br>   
+      <%= f.label "What's their birthday? (Date)" %>
       <%= f.date_field :dob, class: 'mb-1 form-control' %><br>   
       <%= f.label :image %>
       <%= f.file_field :image %><br/><br>
