--- a/app/views/birthdays/show.html.erb
+++ b/app/views/birthdays/show.html.erb
@@ -8,7 +8,7 @@
 </section>
 
 
-<%= image_tag(@birthday.image, style: "max-width: 500px", class: "rounded") %><br>
+<%= image_tag(@birthday.image, style: "max-width: 500px", class: "rounded") %><br><br>
 
 
 <div class="w-50 p-3">
