--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="sign">
-      <span class="fast-flicker">Rememb</span>irth<span class="flicker">d</span>ay
+      <span class="fast-flicker">Remem</span>Birth<span class="flicker"></span>day
     </div>
 
   </body>
