--- a/app/views/birthdays/show.html.erb
+++ b/app/views/birthdays/show.html.erb
@@ -7,9 +7,7 @@
 </div>
 </section>
 
-
-<%= image_tag(@birthday.image, style: "max-width: 500px", class: "rounded") %><br><br>
-
+    <%= image_tag(@birthday.image, style: "max-width: 500px", class: "rounded img") %><br><br>
 
 <div class="w-50 p-3">
 <div class="p-3 mb-2 bg-light">       
@@ -41,4 +39,5 @@
         </div>
     </div>
 </div>
+
 </center>
